fix margin and height on align-right menus

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -85,6 +85,12 @@ $menu-expand-max: 6 !default;
     display: inline-block;
     margin-#{$global-right}: get-side($menu-item-padding, $global-right);
   }
+  &.align-#{$global-right} {
+    li {
+      margin-#{$global-right}: 0;
+      margin-#{$global-left}: get-side($menu-item-padding, $global-right);
+    }
+  }
 
   a {
     padding: 0;
@@ -179,6 +185,12 @@ $menu-expand-max: 6 !default;
 
     // Align right
     &.align-#{$global-right} {
+      &::after {
+        clear: both;
+        content: '';
+        display: block;
+      }
+
       > li {
         float: $global-right;
       }
